--- a/index.html
+++ b/index.html
@@ -2,20 +2,36 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <title>Carter Bacon</title>
     <link rel="stylesheet" href="./css/portfolio.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Manrope">
     <!-- add viewport meta -->
   </head>
   <body>
     <!-- nav -->
-    <div class="container">
+    <section>
       <nav class="nav-bar">
-        <a href="#">Home</a>
+        <a href="#home">Home</a>
         <a href="#">About</a>
+        <a href="#">Github</a>
         <a href="#">Contact</a>
       </nav>
-    </div>
-    <!-- hero section -->
+    </section>
 
+    <!-- home -->
+    <section id="home" class="container">
+      <div class="text-overlay">
+        <h1>Carter Codes</h1>
+        <h4 class="welcome-message">
+          Building something out of nothing
+        </h4>
+      </div>
+      <div class="hero-video">
+        <video autoplay muted loop>
+          <source src="./img/vid/pexels-mikhail-nilov-7456768.mp4"
+        </video>
+      </div>
+    </section>
     <!-- about -->
 
     <!-- form -->
