Renamed Carter's Code

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <!-- home -->
     <section id="home" class="container">
       <div class="text-overlay">
-        <h1>Carter Codes</h1>
+        <h1>Carter's Code</h1>
         <h4 class="welcome-message">
-          Building something out of nothing
+          <!-- Building something out of nothing -->
         </h4>
       </div>
       <div class="hero-video">
